--- a/Arsenal/Arsenal.csproj
+++ b/Arsenal/Arsenal.csproj
@@ -6,5 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="*.json" CopyToOutputDirectory="Always"/>
+  </ItemGroup>
 
 </Project>
